# hyprspaces

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  hyprpm.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  nix-flake-update.yml
fixtures/: hyprspaces.conf  paired.json  status.txt  theme.css  waybar-helper.py  waybar.json  workspaces.css  workspaces.json
include/hyprspaces/: actions.hpp  autostart.hpp  command.hpp  config.hpp  config_value.hpp  debounce.hpp  dispatch.hpp  dispatch_result.hpp  events.hpp  failsafe.hpp  file_descriptor.hpp  function_match.hpp  history.hpp  hyprctl.hpp  json_utils.hpp  layout_capture.hpp  layout_restore.hpp  layout_restore_tracker.hpp  layout_tree.hpp  logging.hpp  marks.hpp  monitor_groups.hpp  monitor_profiles.hpp  notifications.hpp  pairing.hpp  paths.hpp  persistent_workspaces.hpp  plugin_entry.hpp  process_utils.hpp  profiles.hpp  protocol_session.hpp  registration.hpp  runtime.hpp  runtime_utils.hpp  session_protocol_state.hpp  session_protocol_store.hpp  setup.hpp  state_provider.hpp  status.hpp  strings.hpp  (+7 more)
protocols/: xx-session-management-v1-protocol.c  xx-session-management-v1-protocol.h
scripts/: cleanup-headless.sh  format.sh  plugin-install.sh  plugin-logs.sh  plugin-reload.sh  test-env.sh  test.sh
src/: actions.cpp  autostart.cpp  command.cpp  config.cpp  config_value.cpp  debounce.cpp  dispatch.cpp  dispatch_result.cpp  events.cpp  function_match.cpp  history.cpp  hyprctl.cpp  json_utils.cpp  layout_capture.cpp  layout_restore.cpp  layout_restore.hpp  layout_tree.cpp  logging.cpp  marks.cpp  monitor_groups.cpp  monitor_profiles.cpp  notifications.cpp  pairing.cpp  paths.cpp  persistent_workspaces.cpp  plugin.cpp  plugin_entry.cpp  plugin_state.cpp  plugin_state.hpp  process_utils.cpp  profiles.cpp  protocol_session.cpp  registration.cpp  runtime.cpp  runtime_utils.cpp  session_protocol_server.cpp  session_protocol_server.hpp  session_protocol_state.cpp  session_protocol_store.cpp  setup.cpp  (+7 more)
tests/: actions_test.cpp  autostart_test.cpp  command_test.cpp  config_test.cpp  config_value_test.cpp  debounce_test.cpp  dispatch_result_test.cpp  dispatch_test.cpp  events_test.cpp  failsafe_test.cpp  file_descriptor_test.cpp  function_hooks_test.cpp  function_match_test.cpp  headless_cleanup_script_test.cpp  history_test.cpp  hyprctl_client_test.cpp  hyprctl_parse_test.cpp  hyprland_api_stub.cpp  json_utils_test.cpp  layout_capture_test.cpp  layout_restore_test.cpp  layout_restore_tracker_test.cpp  layout_tree_test.cpp  logging_test.cpp  monitor_groups_test.cpp  monitor_profiles_test.cpp  notifications_test.cpp  pairing_test.cpp  paths_test.cpp  persistent_workspaces_test.cpp  plugin_entry_test.cpp  plugin_install_script_test.cpp  plugin_registration_test.cpp  process_utils_test.cpp  profile_catalog_test.cpp  profiles_test.cpp  runtime_test.cpp  runtime_utils_test.cpp  session_protocol_state_test.cpp  session_protocol_store_test.cpp  (+8 more)
